--- a/docs/thesis/glossary.tex
+++ b/docs/thesis/glossary.tex
@@ -49,11 +49,20 @@
 
 \newglossaryentry{RSMC}{name={RSMC},description={Revocable Sequence Maturity Contracts, A bitcoin output with two spendable paths. One of the paths have a delay, a revocation window, to give the the counterparty time to spend the output if the broadcast was in violation}}
 
-\newglossaryentry{BRT}{name={BRT},description={Breach Remedy Transaction, A bitcoin transaction spending a fautly RSMC broadcast}}
+\newglossaryentry{BRT}{name={BRT},description={Breach Remedy Transaction, A bitcoin transaction spending a faulty RSMC broadcast}}
 
 \newglossaryentry{commitment transaction}{name={Commitment Transaction},description={, A bitcoin transaction declaring the latest balance between two parties}}
 
 \newglossaryentry{HTLC}{name={HTLC},description={Hash Time Lock Contract, A bitcoin output spendable by a party disclosing a proof of a payment during a designated time window}}
 
+\newglossaryentry{preferential attachment}{name={preferential attachment},description={Strictly defined as $\Pi(i) \propto k_i$, the probability of receiving an edge is proportional to degree. Also used broader by its litterary as attachment with selection bias.}}
 
+\newglossaryentry{Mainnet}{name={Mainnet},description={ is the live strict system where real bitcoin is used}}
 
+\newglossaryentry{Testnet}{name={Testnet},description={ is the test system with fake bitcoin. The system works exactly the same as Mainnet, but with significantly lower hashing power and another transaction history. It is intended to be used in test purposes. Some Testnet miners gives away bitcoin to developers under the term \textit{faucets}}}
+
+\newglossaryentry{betweenness centrality}{name={betweenness centrality},description={is a property of a node or on edge. It is the number of shortest paths between node pairs in the graph that pass through the node or edge}}
+
+\newglossaryentry{giant component}{name={giant component},description={is a largest connected piece of a graph, if the graph is connected the whole graph is a Giant Component}}
+
+\newglossaryentry{diameter}{name={diameter},description={is the longest shortest path between a pair of nodes in a graph}}
